--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Cathedrals -- England'
 - !lcsh 'York Minster'
 - !lcc 'NA'
+- GITenberg
 title: York Minster
 url: http://www.gutenberg.org/ebooks/36552
